fixed navbar on narrow devices

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,9 @@ a
 	margin: 0;
 	padding: 0;
 
-	background-color: magenta;
+	overflow: hidden;
+
+	background-color: var(--beige-darker);
 	background-image: no-repeat;
 	background-size: cover;
 	background-position: top;
@@ -64,6 +66,7 @@ a
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	gap: var(--small-gap);
 
 	padding: var(--small-gap);
@@ -113,6 +116,8 @@ a
 	margin: 0;
 	padding: 0;
 	margin-bottom: -5px;
+	
+	white-space: nowrap;
 
 	font-family: var(--font-sans-serif);
 	font-weight: 800;
@@ -122,11 +127,14 @@ a
 
 .navbar-right
 {
-	justify-content: flex-end;
+	justify-content: flex-start;
+	align-items: center;
+	flex-wrap: wrap;
+	margin-left: var(--page-side-gap);
 	margin-right: var(--page-side-gap);
 }
 
-.navbar-right > a
+.page-link
 {
 	margin: 0;
 	padding: 0;
@@ -139,7 +147,7 @@ a
 	align-items: center;
 }
 
-.navbar-right > a > span
+.page-link > span
 {
 	margin: 0 var(--navbar-font-size) 0 var(--navbar-font-size);
 	padding: 0;
@@ -156,6 +164,8 @@ a
 
 	margin: 0;
 	padding: 0;
+	padding-left: 171px;
+	padding-right: 171px;
 
 	box-shadow: inset 0 var(--div-shadow-size) var(--div-shadow-size) calc(-1 * var(--div-shadow-size)) var(--div-shadow-color);
 	overflow: hidden;
@@ -164,23 +174,35 @@ a
 	flex-direction: row;
 	flex-wrap: nowrap;
 	justify-content: center;
-
-	padding-left: 171px;
-	padding-right: 171px;
 }
 
 .content-inner
 {
 	flex-grow: 1;
-	min-width: 500px;
+	min-width: 600px;
 
 	height: 100%;
 	margin: 0;
 	padding: 0;
 
+	display: flex;
+	justify-content: center;
+	align-items: stretch;
+
 	background-color: var(--content-inner-overlay);
-	
+
 	box-shadow: 0 0 var(--div-shadow-size) 0 var(--div-shadow-color);
+}
+
+.content-div
+{
+	flex-grow: 1;
+
+	max-width: calc(100vw - 4 * var(--small-gap));
+	margin: var(--small-gap);
+	padding: var(--small-gap);
+
+	background-color: green;
 }
 
 p, h1
